--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+body{
+    background-image: url(assets/bg-image.png);
+    background-color: #573824;
+    background-size: cover;
+}
+
+#page{
+    padding: 24px;
+    background-color: #F0E8C2;
+    border-radius: 24px;
+    width: 800px;
+    margin: 48px auto;
+    box-sizing: border-box;
+}
+
+
 img{
     border-radius: 16px;
 }
