--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root{
+    font-family: "Alice", serif;
+    line-height: 150%;
+    color: #573A37;
+}
+
 body{
     background-image: url(assets/bg-image.png);
     background-color: #573824;
@@ -13,7 +19,19 @@ body{
     box-sizing: border-box;
 }
 
-
 img{
     border-radius: 16px;
+}
+
+h1{
+    line-height: 140%;
+    font-size: 40px;
+}
+
+h2{
+    font-size: 24px;
+}
+
+h1, h2{
+    color: #291B1A;
 }
